# pyflowbat

./: .gitignore  Makefile  PreDox_B_002.fcs  README.md  __init__.py  example_analysis.ipynb  example_analysis.tst.ipynb  gating.py  gating.r  init.py  oldpyproject.toml  pyproject.toml  r_gates.tst.py  r_gating.py  r_gating_general.py  rp2_test.py  rp2_test.r  test.py  test.tst.py  tox.ini
.github/workflows/: build.yml  documentation.yml  lint.yml
assets/: std_beads_conversions.csv  std_lims.csv
example-data/: 373_A_002.fcs  373_A_003.fcs  373_B_003.fcs  373_C_001.fcs  373_C_002.fcs  373_D_001.fcs  373_D_003.fcs  373_E_001.fcs  373_F_002.fcs  373_G_001.fcs  373_G_003.fcs  373_H_003.fcs  373_I_001.fcs  373_I_002.fcs  373_I_003.fcs  373_K_002.fcs  373_M_001.fcs  373_M_002.fcs  373_M_003.fcs  373_O_001.fcs  373_O_003.fcs  373_P_001.fcs  664_A_001.fcs  664_B_001.fcs  664_B_002.fcs  664_C_002.fcs  664_D_001.fcs  664_D_002.fcs  664_E_003.fcs  664_F_001.fcs  664_F_002.fcs  664_F_003.fcs  664_G_001.fcs  664_G_003.fcs  664_H_002.fcs  664_H_003.fcs  664_J_003.fcs  664_K_001.fcs  664_K_003.fcs  664_L_001.fcs  (+212 more)
examples/: example_analysis.ipynb
notebook/: example_analysis.ipynb
notebook/example-data/: 373_A_001.fcs  373_B_001.fcs  373_B_002.fcs  373_C_003.fcs  373_D_002.fcs  373_E_002.fcs  373_E_003.fcs  373_F_001.fcs  373_F_003.fcs  373_G_002.fcs  373_H_001.fcs  373_H_002.fcs  373_J_001.fcs  373_J_002.fcs  373_J_003.fcs  373_K_001.fcs  373_K_003.fcs  373_L_001.fcs  373_L_002.fcs  373_L_003.fcs  373_N_001.fcs  373_N_002.fcs  373_N_003.fcs  373_O_002.fcs  373_P_002.fcs  373_P_003.fcs  664_A_002.fcs  664_A_003.fcs  664_B_003.fcs  664_C_001.fcs  664_C_003.fcs  664_D_003.fcs  664_E_001.fcs  664_E_002.fcs  664_G_002.fcs  (+198 more)
pyflowbat/: .gitignore  README.md  pyflowbat.py  setup.py
(+51 files in other folders)
