[tool.poetry]
name = "pyflowbat"
version = "0.0.0"
description = ""
authors = ["Zoë <zoex308@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
FlowCal = "^1.3.0"
statsmodels = "^0.13.5"
scipy = "^1.10.1"
pandas = "^2.0.0"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.12.2"
tox = "^3.24.5"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.1.1"
mypy = "^0.941"
sphinx-rtd-theme = "^1.0.0"
sphinx_mdinclude = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
