[tool.poetry]
name = "pyflowbat"
version = "0.0.0"
description = ""
authors = ["Zoë <zoex308@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
FlowCal = "^1.3.0"
statsmodels = "^0.13.5"
scipy = "^1.10.1"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
